--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-<<<<<<< HEAD
-<<<<<<< HEAD
         "geekcom/validator-docs": "^3.10",
-=======
->>>>>>> Initial commit - Laravel backend
-=======
-        "geekcom/validator-docs": "^3.10",
->>>>>>> Atualização de Testes
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
@@ -29,15 +22,8 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-<<<<<<< HEAD
-<<<<<<< HEAD
+        "phpunit/phpunit": "^11.0.1",
         "phpunit/phpunit": "^11.3"
-=======
-        "phpunit/phpunit": "^11.0.1"
->>>>>>> Initial commit - Laravel backend
-=======
-        "phpunit/phpunit": "^11.3"
->>>>>>> Atualização de Testes
     },
     "autoload": {
         "psr-4": {
@@ -64,15 +50,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
-<<<<<<< HEAD
-<<<<<<< HEAD
-            "@php -r \"file_exists('database/database_test.sqlite') || touch('database/database_test.sqlite');\"",
-=======
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
->>>>>>> Initial commit - Laravel backend
-=======
             "@php -r \"file_exists('database/database_test.sqlite') || touch('database/database_test.sqlite');\"",
->>>>>>> Atualização de Testes
             "@php artisan migrate --graceful --ansi"
         ]
     },
