--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
+        "beyondcode/laravel-er-diagram-generator": "^4.0",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1",
         "phpunit/phpunit": "^11.3"
     },
     "autoload": {
