--- a/.env.testing
+++ b/.env.testing
@@ -4,7 +4,7 @@ APP_KEY=base64:xFu06E+3qeEPlsVFtxAN1RLJNodUretZO+pqhdLWcLk=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://127.0.0.1:8000
-FRONTEND_URL=http://localhost:4200
+FRONTEND_URL=http://localhost:8080
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -24,14 +24,14 @@ DB_CONNECTION=sqlite
 DB_DATABASE=/home/marcos/Vídeos/agendamento-acolhidos/appointment-backend/database/database.sqlite
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
-SESSION_EXPIRE_ON_CLOSE=false  # Altere para true se quiser que a sessão expire ao fechar o navegador
-SESSION_ENCRYPT=true  # Ative a criptografia de sessão para maior segurança
+SESSION_EXPIRE_ON_CLOSE=false  
+SESSION_ENCRYPT=true  
 SESSION_PATH=/
 SESSION_DOMAIN=null
-SESSION_SAME_SITE=lax  # Pode ajustar para "strict" ou "none" dependendo das suas necessidades de segurança e acessibilidade
-SESSION_SECURE_COOKIE=false  # Defina como true se estiver usando HTTPS
+SESSION_SAME_SITE=lax 
+SESSION_SECURE_COOKIE=false  
 SESSION_HTTP_ONLY=true
-SESSION_PARTITIONED_COOKIE=false  # Ative apenas se necessário para casos específicos de cookies particionados
+SESSION_PARTITIONED_COOKIE=false  
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
